tests/regression/error/hw4_error10.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY {lft=EXP_STRING "bob",opr=BOP_GE,rht=EXP_NONE}}]}
  : program
;
